# pyllplot

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conf.py  index.html  index.rst  little_script.py  pyproject.toml  requirements-dev.txt  rscript.py
_build/doctrees/: environment.pickle  index.doctree
_build/html/: objects.inv  searchindex.js
docs/: .buildinfo  genindex.html  index.html  installation.html  introduction.html  objects.inv  quickstart.html  search.html  searchindex.js  sorted_stream.html
docs/_sources/: index.rst.txt  installation.rst.txt
docs/_static/: alabaster.css
docs/source/: conf.py  index.rst  installation.rst  introduction.rst
docs/sources/: index.rst.txt  introduction.rst.txt  quickstart.rst.txt  sorted_stream.rst.txt
output/: sortedstream_data.json  sortedstream_viz.html
pyllplot/: __init__.py  dummy_script.py  test2.py
pyllplot/custom_plots/: sorted_stream.py
pyllplot/examples/: sorted_stream.py
pyllplot/plotting/: base.py  sortedstream.py
quickd3/: __init__.py  d3_plot.py  dummy_script.py  funcitons.py  template_manager.py
quickd3/old/: stakorder_template.py
quickd3/plotting/: base.py  base_plot.py  sortedstream.py  stackorder_plot.py
quickd3/python_templates/: base_template.py
quickd3/templates/: sortedstream_template.html  stackorder_template.html
sphynx/source/: conf.py  index.rst  introduction.rst  quickstart.rst
tests/: test_BasePlot.py  test_D3Plot.py
