[build-system]
requires      = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rquickd3"
version = "2024.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Karla Hernandez"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["d3", "visualization", "infographic", "data science", "chart", "design"]
dependencies = [
    "html2text",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["check-manifest", "bumpver", "pytest", "flake8", "black", "pre-commit"]

[project.urls]
Homepage = "https://github.com/karlahrnndz/quickd3"

[tool.bumpver]
current_version = "2024.1.0"
version_pattern = "YYYY.MM.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"quickd3/__init__.py" = ["{version}"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"

[tool.black]
line-length = 88