[tool.poetry]
name = "pyllplot"
version = "2024.1.0"
description = ""
authors = ["Karla Hernandez"]
license = "MIT"
keywords = ["d3", "visualization", "infographic", "data science", "chart", "design"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.10.0"
pandas = "^2.2.0"
scipy = "^1.12.0"
colorlover = "^0.3.0"
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
check-manifest = "^0.46.0"
bumpver = "^2021.3.4"
pytest = "^6.2.0"
flake8 = "^3.9.0"
black = "^20.8b1"
pre-commit = "^2.12.0"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"

[tool.black]
line-length = 88

